--- a/public/less/theme/_add-listing.less
+++ b/public/less/theme/_add-listing.less
@@ -660,6 +660,14 @@
 }
 
 
+@media screen and (min-width: 1024px){
+	.catOptions{
+		justify-content: center;
+		flex-wrap: wrap;
+	}
+}
+
+
 .review-note{
 	padding: 1em 1.5em;
     background-color: #fdf4f2;
