--- a/public/less/theme/helpers/_helper.less
+++ b/public/less/theme/helpers/_helper.less
@@ -178,6 +178,10 @@
   align-items: flex-start;;
 }
 
+.justify-center{
+  justify-content: center;
+}
+
 .label-size{
   font-size: 1.1em;
   @media screen and (max-width: 650px){
